[package]
name = "candle-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
clap = "4.4.8"
env_logger = "0.10.1"
orca = { git = "https://github.com/scrippt-tech/orca" }
serde_json = "1.0.108"
tokio = "1.34.0"


